# NeoOLAF

./: .env.example  .gitignore  INCREMENTAL_CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/document_profiles/: generic.json  xquality_loose.json  xquality_machine32.json  xquality_relaxed_recall.json  xquality_strict_extraction.json
configs/output_schemas/: layer01_alarm_record.json
data/ontology/: ContextOntology-COInd4.owl
docs/: __main___optional_cli_patch.diff
docs/integration/: neoolaf-studio-read-only-integration.md
examples/: evaluation.ipynb  minimal_pipeline.ipynb  minimal_pipeline.py
examples/.ipynb_checkpoints/: minimal_pipeline-checkpoint.ipynb
examples/KES2026/: Baseline_Metrics.ipynb  KES_Comparison.ipynb
examples/RAGTreeDatasets/: CORRECTED_ABLATION_NOTES.md  DocRED_NeoOLAF_Native_Layer_Ablation_SkaiTV.ipynb  DocRED_NeoOLAF_Native_Layer_Ablation_SkaiTV_v3.ipynb  DocRED_NeoOLAF_Native_Layer_Ablation_SkaiTV_v5.ipynb  DocRED_NeoOLAF_Native_Layer_Ablation_SkaiTV_v5_1.ipynb  PATCH_V3_NOTES.md  PATCH_V4_NOTES.md  PATCH_V5_1_NOTES.md  PATCH_V5_NOTES.md  RAGTreeDatasets.ipynb  RAGTreeDatasets_DocRED_NativeNeoOLAF_Batch_v6_1_RunEval.ipynb  RAGTreeDatasets_DocRED_NativeNeoOLAF_Batch_v6_RunEval.ipynb  RAGTreeDatasets_DocRED_NativeNeoOLAF_DevStreaming_v6_2_RunEval.ipynb  RAGTreeDatasets_DocRED_RawText_NativeNeoOLAF_Smoke5_RunEval.ipynb  RAGTree_Datasets.ipynb  (+15 more)
prompts/: README.md
scripts/: build_source_archive.py
tests/: EVALUATION_RESULTS_EXPLAINED.md  fake_data.py  run_evaluation.py  run_reports.py  test_evaluation.py
(+1379 files in other folders)
